# ai-agent-platform

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  NOTICE  README.md  alembic.ini  casbin_model.conf  docker-compose.yml  feature_list.active.json  feature_list.json  init.sh  knowledge.md  progress.md  pyproject.toml  requirements-cli.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2026_07_06_0725_7043d564e936_initial_schema.py  2026_07_06_1420_ab8c310529f6_add_created_at_to_user_tenants.py  2026_07_07_0000_c1d2e3f4a5b6_extend_user_rbac_orgs_sessions_logs.py  2026_07_08_0119_ce505ae8a1bd_add_partial_unique_index_on_users_.py  2026_07_09_0655_1546b57e8c7b_add_platform_role_to_users.py  2026_07_09_1000_d1e2f3a4b5c6_add_scd2_time_dimension_to_user_tenants_.py  2026_07_10_1200_a2b3c4d5e6f7_add_updated_at_to_conversations.py  2026_07_11_0900_b3c4d5e6f7a8_add_llm_configs_table.py  2026_07_11_1000_c4d5e6f7a8b9_add_api_tokens_table.py  2026_07_11_1319_5dd68e90d6f0_add_agent_inference_params_and_.py  2026_07_12_0431_574391d912fc_add_groups_and_group_tenants_tables.py  2026_07_12_0710_6f197cf8f964_add_customers_and_customer_profiles_.py  2026_07_12_1249_84605f063730_add_tenant_status_created_by_.py  2026_07_13_1112_4708b3fbf2e7_add_data_scope_to_roles.py  2026_07_13_1430_b739b2ae902b_add_message_token_columns_and_usage_.py  2026_07_13_1900_e8f9a0b1c2d3_add_wallet_wallet_transactions_model_pricing.py  2026_07_13_2030_f9a0b1c2d4e5_add_customer_id_to_conversations.py  2026_07_14_0900_a1b2c3d4e5f6_add_trend_indexes.py  2026_07_14_1030_b2c3d4e5f6a7_add_conversation_management_columns.py  2026_07_14_1200_c3d4e5f6a7b8_add_tenant_configs_table.py  2026_07_14_1330_d4e5f6a7b8c9_add_notifications_table.py  2026_07_15_0100_e5f6a7b8c9d0_add_notification_reads_table.py  2026_07_15_0200_f1a2b3c4d5e6_add_embedding_configs_table.py  2026_07_15_0300_f2b3c4d5e6f7_add_documents_and_document_chunks.py  2026_07_16_0100_a3b4c5d6e7f8_add_agent_orchestration.py  2026_07_16_0200_b4c5d6e7f8a9_db_design_cleanup.py  2026_07_17_0100_c5d6e7f8a9b0_change_embedding_dimension_to_1024.py  2026_07_17_0200_d6e7f8a9b0c1_add_api_token_scope_mode.py  2026_07_21_2100_e649e80a4169_add_device_models_table.py  2026_07_22_1000_a0eaec7aab7c_add_devices_table.py  2026_07_23_1000_8423ee2df128_add_bookings_table.py
app/: main.py
app/agents/: graph.py  token_budget.py
app/api/: deps.py  token_context.py
app/core/: casbin_enforcer.py  config.py  crypto.py  database.py  dates.py  dev_keys.py  local_auth.py  metrics.py  password.py  scheduler.py  security.py  storage.py  validation_errors.py
app/models/: agent.py  agent_specialist.py  api_token.py  booking.py  customer.py  device.py  device_model.py  document.py  embedding_config.py  group.py  llm_config.py  log.py  message.py  model_pricing.py  notification.py  organization.py  rbac.py  security.py  tenant.py  tenant_config.py  usage_event.py  wallet.py
app/repositories/: agent.py  agent_specialist.py  api_token.py  base.py  booking.py  conversation.py  customer.py  dashboard.py  device.py  device_model.py  document.py  embedding_config.py  group.py  llm_config.py  log.py  notification.py  organization.py  rbac.py  security.py  tenant.py  tenant_config.py  usage_event.py  user.py  wallet.py
app/schemas/: agent.py  api_token.py  auth.py  billing.py  booking.py  conversation.py  customer.py  dashboard.py  device.py  device_model.py  document.py  embedding_config.py  group.py  llm_config.py  log.py  notification.py  organization.py  rbac.py  search.py  tenant.py  tenant_config.py  user.py
app/services/: agent_service.py  api_token_service.py  auth_service.py  billing_service.py  (+23 more)
cli/: __init__.py  client.py  config.py  context.py  errors.py  handlers.py  main.py
docs/: LOGTO_SETUP.md  auth-history-scd2-plan.md  db-schema.html  db-schema.mmd  frontend-ui-ux-revamp-plan.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
harness/: clean-state-checklist.md
scripts/: backfill_bookings_perms.py  backfill_devices_perms.py  backfill_permissions.py  init_admin.py  seed_demo.py  skill-counter.sh  sync-active-features.sh
tests/: conftest.py  test_agents_api.py  test_api_token_scopes.py  test_api_tokens.py  test_auth.py  test_auth_local.py  test_billing.py  test_booking_state.py  test_bookings_api.py  test_chat.py  test_conversation_management.py  test_customer_conversation.py  test_customers_api.py  test_dashboard_api.py  test_data_scope.py  test_device_models_api.py  test_devices_api.py  test_embedding_config.py  test_export.py  test_global_search.py  test_graph_llm_kwargs.py  test_groups_api.py  test_health.py  test_hq_platform_role.py  test_knowledge_rag.py  test_llm_config.py  test_logs_api.py  test_multi_agent.py  test_notifications.py  test_organizations_api.py  test_permission.py  test_permission_service.py  test_permissions_api.py  test_profile.py  test_rbac_api.py  test_scd2_history.py  test_service_platform_role.py  test_tenant_config.py  test_tenants_api.py  test_token_budget.py  (+6 more)
项目指南/: README-给AI.md  README.md
(+226 files in other folders)
