[project]
name = "agenthub"
version = "0.1.0"
description = "多租户智能体云平台(FastAPI + pycasbin + LangGraph)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# B008: Depends() in default args is the canonical FastAPI pattern.
# E501: line length is handled by black.
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["app"]
concurrency = ["thread", "greenlet"]
omit = [
    "app/main.py",
    "app/core/dev_keys.py",
    "alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
